--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
 }
+.full-viewport {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
