--- a/src/App.scss
+++ b/src/App.scss
@@ -24,22 +24,19 @@ body {
     background-color: #ffffff;
 
     display: flex;
-    min-height: 0px;
-    min-width: 0px;
     -webkit-box-pack: start;
     justify-content: flex-start;
     -webkit-box-align: stretch;
     align-items: stretch;
     flex-direction: column;
-    /*gap: 8px;*/
-    padding: 0px;
+    padding: 0;
     border: 1px solid #ddd;
 
     &.active {
         border: 1px solid #0265D2;
     }
     .header{
-        border-radius: 8px 0 0 8px;
+        border-radius: 8px 8px 0 0;
         max-height: 32px;
 
         min-width: 0;
@@ -74,6 +71,10 @@ body {
             }
 
         }
+    }
+
+    .content {
+        border-radius: 0 0 8px 8px;
     }
 
     .data-flow {
